.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
Info: Nothing to build for PruebaFinalLinkedListTP3
Info: Nothing to build for PruebaFinalLinkedListTP3
Info: Nothing to build for PruebaFinalLinkedListTP3
19:41:53 **** Incremental Build of configuration Debug for project PruebaFinalLinkedListTP3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Controller.o" "..\\src\\Controller.c" 
..\src\Controller.c: In function 'controller_loadFromText':
..\src\Controller.c:49:10: warning: missing terminating " character
   49 |   printf("Hasta aca llegué!\n\n\");
      |          ^
..\src\Controller.c:49:10: error: missing terminating " character
   49 |   printf("Hasta aca llegué!\n\n\");
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\Controller.c:50:12: error: expected ')' before ';' token
   50 |   fclose(f);
      |            ^
      |            )
..\src\Controller.c:50:3: warning: passing argument 1 of 'printf' makes pointer from integer without a cast [-Wint-conversion]
   50 |   fclose(f);
      |   ^~~~~~~~~
      |   |
      |   int
In file included from ..\src\Controller.c:1:
c:\mingw\include\stdio.h:462:46: note: expected 'const char *' but argument is of type 'int'
  462 | _CRTIMP __cdecl __MINGW_NOTHROW  int printf (const char *, ...);
      |                                              ^~~~~~~~~~~~
..\src\Controller.c:50:13: error: expected ';' before '}' token
   50 |   fclose(f);
      |             ^
      |             ;
   51 |  }
      |  ~           
19:42:14 **** Incremental Build of configuration Debug for project PruebaFinalLinkedListTP3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Controller.o" "..\\src\\Controller.c" 
..\src\Controller.c: In function 'controller_loadFromText':
..\src\Controller.c:49:29: error: stray '\' in program
   49 |   printf("Hasta aca llegué!"\n\n\);
      |                             ^
..\src\Controller.c:49:29: error: expected ')' before 'n'
   49 |   printf("Hasta aca llegué!"\n\n\);
      |                             ^~
      |                             )
..\src\Controller.c:49:31: error: stray '\' in program
   49 |   printf("Hasta aca llegué!"\n\n\);
      |                               ^
..\src\Controller.c:49:33: error: stray '\' in program
   49 |   printf("Hasta aca llegué!"\n\n\);
      |                                 ^
19:42:47 **** Incremental Build of configuration Debug for project PruebaFinalLinkedListTP3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Controller.o" "..\\src\\Controller.c" 
gcc -o PruebaFinalLinkedListTP3.exe "src\\Controller.o" "src\\Employee.o" "src\\LinkedList.o" "src\\PruebaFinalLinkedListTP3.o" "src\\Validaciones.o" "src\\biblioteca_input.o" "src\\parser.o" 
Info: Nothing to build for PruebaFinalLinkedListTP3
19:43:35 **** Incremental Build of configuration Debug for project PruebaFinalLinkedListTP3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\PruebaFinalLinkedListTP3.o" "..\\src\\PruebaFinalLinkedListTP3.c" 
..\src\PruebaFinalLinkedListTP3.c: In function 'main':
..\src\PruebaFinalLinkedListTP3.c:51:37: error: incomplete universal character name \U
   51 |          if(controller_loadFromText("C:\Users\Nacho\Desktop\Programacion\UTN\ProgramacionUno\PruebaFinalLinkedListTP3\src\data.csv",listaEmpleados)==0)
      |                                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\PruebaFinalLinkedListTP3.c:51:37: warning: unknown escape sequence: '\N'
..\src\PruebaFinalLinkedListTP3.c:51:37: warning: unknown escape sequence: '\D'
..\src\PruebaFinalLinkedListTP3.c:51:37: warning: unknown escape sequence: '\P'
..\src\PruebaFinalLinkedListTP3.c:51:37: error: incomplete universal character name \U
..\src\PruebaFinalLinkedListTP3.c:51:37: warning: unknown escape sequence: '\P'
..\src\PruebaFinalLinkedListTP3.c:51:37: warning: unknown escape sequence: '\P'
..\src\PruebaFinalLinkedListTP3.c:51:37: warning: unknown escape sequence: '\s'
..\src\PruebaFinalLinkedListTP3.c:51:37: warning: unknown escape sequence: '\d'
19:43:45 **** Incremental Build of configuration Debug for project PruebaFinalLinkedListTP3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\PruebaFinalLinkedListTP3.o" "..\\src\\PruebaFinalLinkedListTP3.c" 
gcc -o PruebaFinalLinkedListTP3.exe "src\\Controller.o" "src\\Employee.o" "src\\LinkedList.o" "src\\PruebaFinalLinkedListTP3.o" "src\\Validaciones.o" "src\\biblioteca_input.o" "src\\parser.o" 
c:/mingw/bin/../lib/gcc/mingw32/9.2.0/../../../../mingw32/bin/ld.exe: cannot open output file PruebaFinalLinkedListTP3.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
19:43:49 **** Incremental Build of configuration Debug for project PruebaFinalLinkedListTP3 ****
Info: Internal Builder is used for build
gcc -o PruebaFinalLinkedListTP3.exe "src\\Controller.o" "src\\Employee.o" "src\\LinkedList.o" "src\\PruebaFinalLinkedListTP3.o" "src\\Validaciones.o" "src\\biblioteca_input.o" "src\\parser.o" 
19:44:52 **** Incremental Build of configuration Debug for project PruebaFinalLinkedListTP3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\PruebaFinalLinkedListTP3.o" "..\\src\\PruebaFinalLinkedListTP3.c" 
gcc -o PruebaFinalLinkedListTP3.exe "src\\Controller.o" "src\\Employee.o" "src\\LinkedList.o" "src\\PruebaFinalLinkedListTP3.o" "src\\Validaciones.o" "src\\biblioteca_input.o" "src\\parser.o" 
20:35:45 **** Incremental Build of configuration Debug for project PruebaFinalLinkedListTP3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\LinkedList.o" "..\\src\\LinkedList.c" 
gcc -o PruebaFinalLinkedListTP3.exe "src\\Controller.o" "src\\Employee.o" "src\\LinkedList.o" "src\\PruebaFinalLinkedListTP3.o" "src\\Validaciones.o" "src\\biblioteca_input.o" "src\\parser.o" 
Info: Nothing to build for PruebaFinalLinkedListTP3
